<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item android:id="@+id/browsePdf"
            android:title="@string/browse_pdf"
            />
        <item android:id="@+id/setLanguage"
            android:title="@string/set_language"
            
            />
        <item android:id="@+id/setTheme"
            app:actionLayout="@layout/drawer_switch"
            android:title="@string/enable_darkmode"
            />
        <item android:id="@+id/privacyPolicy"
            android:title="@string/privacy_policy"
            />
        <item android:id="@+id/home5"
            android:title="@string/share_application"
            />
    </group>
</menu>