<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        style = "@style/SCREEN"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/appLayout"
        tools:context=".MainActivity">


        <LinearLayout
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">


            <ImageView
                android:id="@+id/hamburgerMenuIcon"
                android:layout_width="63dp"
                android:layout_height="match_parent"
                android:src="@drawable/hamburger_menu" />

            <android.widget.SearchView
                style="@style/SearchViewStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:clickable="true"
                app:iconifiedByDefault="false"
                app:searchIcon="@null"
                android:layoutDirection="rtl"
                android:id="@+id/searchView"
                />

            <!--        <ImageView-->
            <!--            android:id="@+id/searchIcon"-->
            <!--            android:layout_width="30dp"-->
            <!--            android:layout_height="55dp"-->
            <!--            android:layout_marginEnd="20dp"-->
            <!--            android:src="@drawable/search_icon" />-->


        </LinearLayout>

        <TextView
            style = "@style/TEXT"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="1dp"
            android:paddingStart="20dp"
            android:text="@string/favourites"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBar" />

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <LinearLayout
                android:id="@+id/backToMain"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:id="@+id/allFilesImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/all_files_icon" />

                <TextView
                    style = "@style/TEXT"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/all_files_small_text"
                    android:textAlignment="center"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:id="@+id/recentFiles"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:id="@+id/recentFilesImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/clock_icon" />

                <TextView
                    style = "@style/TEXT"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/recent_small_text"
                    android:textAlignment="center"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/favoritesFiles"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:id="@+id/favoriteFilesImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/heart_icon" />

                <TextView
                    style = "@style/TEXT"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/favourite_small_text"
                    android:textAlignment="center"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@+id/footer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_min="565dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <LinearLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>

        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="match_parent"-->
        <!--        app:headerLayout="@layout/header"-->
        <!--        app:menu="@menu/main_menu"-->
        <!--        android:id="@+id/nav_view"-->
        <!--        android:layout_gravity="start"-->


    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        tools:ignore="MissingConstraints"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginLeft="20dp"
                android:text="@string/version" />
        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>